2015-12-10 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/gui.py (ComboxConfigDialog.apply): now writes the
	configuration to disk in the default combox configuration
	directory.

2015-12-03 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/gui.py: input validation kinda done + added status bar.

2015-12-03 Siddharth Ravikumar <sravik@bgsu.edu>

	commit 952906378f80

	* combox/gui.py: added "re-enter passphrase" field + validation for it.


2015-11-30 Siddharth Ravikumar <sravik@bgsu.edu>

	* added combox/gui.py: contains ComboxConfigDialog, a graphical
	interface for configuring combox; it rough as zark.

2015-11-19 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/events.py: ComboxDirMonitor now uses Lock; now this Lock
	is shared by both the ComboxDirMonitor and the NodeDirMonitors.

	Files changed because of the change to ComboxDirMonitor: combox/cbox.py

	This changed addresses bug#11 (See TODO.org).

2015-11-13 Siddharth Ravikumar <sravik@bgsu.edu>

	bumping to v0.1.3

2015-11-08 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/events.py: ComboxDirMonitor and NodeDirMonitor now keep
	track of the files that are created during "this" run; this
	information is used to ignore the on_modified event triggered by
	watchdog when a file is created.

	Also, a delay proportional to the size of the file is introduced
	on the on_modified callback methods of the ComboxDirMonitor and
	NodeDirMonitor to prevent multiple on_modified from being
	triggered by watchdog.

	These changes are related to bug#10 (See TODO.org).

	* tests/events_test.py: updated correponding tests.

2015-11-02 Siddharth Ravikumar <sravik@bgsu.edu>

	commit 7509f54f5173769eea

	* combox/file.py: Updated the write_file function; a buffer size
	is explicitly specified when opening a file to write.

	This change is related to bug#10.

2015-10-20 Siddharth Ravikumar <sravik@bgsu.edu>

	bumping to v0.1.2

2015-10-18 Siddharth Ravikumar <sravik@bgsu.edu>
